# vim: set noexpandtab:

2012-09-08 Steve
	* Now updated to SUSYTools-00-01-06
	* Fixed the GRL in NtMaker
	* Replace RESOST up/down terms with single term, to reflect change in SUSYTools
	* Tagging SusyCommon-00-00-35

2012-09-06 Steve
	* Added the TTC incomplete event veto to the SusyNtMaker cutflow

2012-09-04 Matt
	* Fixed muon eff error

2012-09-03 Matt
	* Added Met Systematics

2012-09-03 Steve
	* Fixed initialization of SUSYObjDef, setting paths to muon SF and smearing files

2012-09-02 Matt
	* passLArHoleVeto() was reseting jet tlv causing issue with sys scale factor. 
	  commented out this function as it is no longer used anyway. 
	* Updated to SusyTools-00-01-05 
	* Updated electron systematics updated to handle the 4 shifts

2012-09-01 Steve
	* Adding cross section files for noslep grids
	A         data/modeA_hadW_MC1eqMN2.txt
	A         data/modeA_lepW_MC1eqMN2.txt
	A         data/modeC_lepW_MC1eqMN2.txt
	* Updating susySamples with the current available p1032 noslep grids

2012-08-29 Steve
	* Add truth jets to SusyD3PDInterface
	* Add method to SusyD3PDAna for matching reco jets to truth jets with dR
		* Used to set matchTruth flag in SusyNtMaker
	* Filling new tau variables: author, nTrack, eleBDT, jetBDT
	* Tagging SusyCommon-00-00-34

2012-08-26 Steve
	* Added pileup tools for A-B3, A-B, and A-D7
	* Filling the corresponding variables in the SusyNt
	* Adding total event weight functions to SusyD3PDana
	* Tagging SusyCommon-00-00-33

2012-08-20 Steve
	* Adding SusyMetValidation, a class for analyzing the MET in the d3pds

2012-08-17 Steve
	* Updated to MultiLep-01-02-04 and SUSYTools-00-01-04
		* GetMetVector usage changes slightly
	* Updated HforToolD3PD usage, verbosity now works, 
	  so we no longer need to check run number ourselves
	* Tagging SusyCommon-00-00-32

2012-08-13 Steve
	* To make sure I'm allowing all samples allowed by the Hfor tool, I copied
	  the whole function which checks the run number into SusyD3PDAna.isHFORSample()